--- a/index.html
+++ b/index.html
@@ -3,10 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles.css/global.css">
+    <link rel="stylesheet" href="/styles.css/style.css">
 </head>
+
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Это мой первый сайт</p>
+    <header class="header">
+        <nav class="menu">
+            <ul class="menu_list">
+                <li class="menu_list-element-first">главная</li>
+                <li><a href="#lots">посмотреть лоты</a></li>
+                <li><a href="#about">об аукционе</a></li>
+            </ul>
+            </nav>
+        <a><img src="/images/logo-black.svg" class="logo-black"></a>
+        <address class="address">
+            <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+            наб. Принсенграхт 263-<br>265, Амстердам
+        </address>
+    </header> 
+    <main class="main">
+        <section class="cover">
+            <div class="overlay"></div>
+            <h1 class="title">
+                <span class="element-first">оно</span>
+                <span class="element-second">тебе</span>
+                <span class="element-third">надо</span>
+            </h1>
+            <div class="description">
+                <p class="description-text">Аукцион вещей, в которые никто не верил</p>
+                <button class="button">Сделать ставку</button>
+            </div>
+        </section>  
+        <section class="lots">
+            <h2 class="lots-title"> Лоты</h2>
+            <ul class="lots-list">
+                <li class="lot">
+                    <img src="/images/card-lot-01.jpg" class="card_img film">
+                    <div class="overlay"></div>
+                    <a> 
+                        <h3 class="rezh">Фильм режиссёра, который бросил киношколу</h3>
+                        <article class="text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</article>
+                    </a>
+                </li>
+                
+                <li class="lot">
+                    <img src="/images/card-lot-02.jpg" class="card_img book">
+                    <div class="overlay"></div>
+                    <a>
+                        <h3 class="rezh">Книга, где описан один скучный день <br>из жизни<br> рекламного агента</h3>
+                        <article class="text-second">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</article>
+                    </a>
+                </li>
+                
+                <li class="lot">
+                    <img src="/images/card-lot-03.jpg" class="card_img picture">
+                    <div class="overlay"></div>
+                    <a>
+                        <h3 class="rezh">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                        <article class="text-third">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</article>
+                    </a>
+                </li>
+            </ul>
+            <a class="more">посмотреть больше</a>
+        </section>
+        <section class="about">
+            <div class="black-phon-for-logo"> 
+                <img src="images/logo-white.svg" class="logo-white">
+            </div>
+            <div class="kak">
+                <h2 class="about_title">об аукционе</h2>
+                <p class="description-block-first">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+                <p class="description-block-second">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <address class="footer-address">
+            <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+            наб. Принсенграхт 263-265, Амстердам
+        </address>
+        <nav>
+            <ul class="footer_list">
+                <li class="menu_list-element-first">главная</li>
+                <li><a href="#lots">посмотреть лоты</a></li>
+                <li><a href="#about">об аукционе</a></li>
+            </ul>
+        </nav>
+        <ul class="footer_list social_networks">
+                    <li>
+                        <a>
+                            <img src="/images/yt.svg" class="youtube">
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <img src="/images/vk.svg" class="vk">
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <img src="/images/pinterest.svg" class="pin">
+                        </a>
+                    </li>
+            </ul>
+    </footer>
 </body>
+
 </html>
